--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/fortify": "^1.13",
         "laravel/framework": "^9.36",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "mcamara/laravel-localization": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
