--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.1",
+        "bootstrap-iconpicker": "^1.8.2",
         "sass": "^1.55.0"
     }
 }
